# PulseDeckV2--release

./: .gitignore  monitoring.md  package-lock.json  package.json  vite.config.js
scripts/: afterPack.js  audio-devices.ps1  get-network-drives.ps1  gpu-metrics.ps1  launch-electron.js  volume-control.ps1
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: calendar.rs  clipboard_cmd.rs  docker.rs  files.rs  guide.rs  homeassistant.rs  launcher.rs  license.rs  media.rs  mod.rs  monitoring.rs  news.rs  notifications.rs  settings.rs  system_actions.rs  voice.rs  volume.rs  webview.rs
src-tauri/src/workers/: mod.rs  monitoring_worker.rs  og_worker.rs
src/main/: docker.js  guide.js  license.js  main.js  monitoring-worker.js  og-worker.js  preload.js  updater.js  voice-commands.js  voice.js  vosk-koffi.js
src/renderer/: App.jsx  config.js  index.html  main.jsx
src/renderer/components/: LicenseGate.css  LicenseGate.jsx  ModuleSettingsPanel.css  ModuleSettingsPanel.jsx  Sidebar.jsx  StreamDeck.css  StreamDeck.jsx
src/renderer/contexts/: LicenseContext.jsx
src/renderer/hooks/: useModuleConfig.js  useTheme.js
src/renderer/i18n/: de.js  en.js  es.js  fr.js  index.jsx  it.js  ja.js  nl.js  pl.js  pt.js
src/renderer/modules/: Calendar.css  Calendar.jsx  Clipboard.css  Clipboard.jsx  CustomWebview.css  CustomWebview.jsx  Docker.css  Docker.jsx  HomeAssistant.css  HomeAssistant.jsx  Monitoring.css  Monitoring.jsx  News.css  News.jsx  OBS.css  OBS.jsx  Outils.css  Outils.jsx  PhotoFrame.css  PhotoFrame.jsx  Settings.css  Settings.jsx  VoiceCommands.css  VoiceCommands.jsx  Volume.css  Volume.jsx  Weather.css  Weather.jsx
src/renderer/modules/homeassistant/: ColorPopover.jsx  DomainTabs.jsx  EntityTile.jsx  RoomCard.jsx  SensorDetailModal.jsx  constants.js  helpers.js  useAreas.js  useHistory.js
src/renderer/modules/monitoring/: CurvesMode.jsx  DashboardMode.jsx  GaugesMode.jsx  HudMode.jsx  SparkMode.jsx  shared.jsx
src/renderer/modules/outils/: Chronometre.css  Chronometre.jsx  Minuteur.css  Minuteur.jsx  Notes.css  Notes.jsx  Pomodoro.css  Pomodoro.jsx  Screenshots.css  Screenshots.jsx  timerUtils.js
src/renderer/styles/: global.css
src/renderer/utils/: tauriAPI.js  webviewIcons.js
