[package]
name = "pulsedeck"
version = "2.0.0"
description = "PulseDeck - Dashboard pour Corsair Xeneon Edge"
authors = ["G33koun3t"]
edition = "2021"

[lib]
name = "pulsedeck_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-notification = "2"
tauri-plugin-autostart = "2"
tauri-plugin-updater = "2"
tauri-plugin-opener = "2"

# System info
sysinfo = "0.32"

# HTTP client — native-tls (Windows SChannel) instead of rustls to avoid
# Cloudflare TLS fingerprint blocking (rustls has a distinct fingerprint that
# Cloudflare detects and blocks with JS challenges, breaking RSS feeds)
reqwest = { version = "0.12", features = ["json", "native-tls"] }

# Async runtime
tokio = { version = "1", features = ["full"] }
futures = "0.3"

# RSS/Atom parsing
feed-rs = "2"

# ICS calendar parsing
ical = "0.11"

# Crypto for license fingerprint
sha2 = "0.10"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# FFI for Vosk
libloading = "0.8"

# Zip extraction for Vosk models
zip = "2"

# Screenshot capture
xcap = "0.0.13"

# Image processing (thumbnails)
image = "0.25"

# Chrono for timestamps
chrono = "0.4"

# Logging
log = "0.4"
env_logger = "0.11"

# Base64 encoding (voice audio, images)
base64 = "0.22"

# Bytes buffer (zero-copy cloning for speedtest uploads)
bytes = "1"

# UUID
uuid = { version = "1", features = ["v4"] }

# SSH for Docker
russh = "0.46"
russh-keys = "0.46"
async-trait = "0.1"

# URL parsing (for native webview URLs)
url = "2"

# Network interfaces (IP enumeration via OS API, no process spawning)
local-ip-address = "0.6"

# Utilities
once_cell = "1"
dirs = "6"

# Windows-specific APIs
[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
  "Win32_Foundation",
  "Win32_Media_Audio",
  "Win32_Media_Audio_Endpoints",
  "Win32_System_Com",
  "Win32_System_Com_StructuredStorage",
  "Win32_UI_Input_KeyboardAndMouse",
  "Win32_Graphics_Gdi",
  "Win32_System_SystemInformation",
  "Win32_Security",
  "Win32_System_Registry",
  "Win32_UI_Shell",
  "Win32_UI_Shell_PropertiesSystem",
  "Win32_System_Performance",
  "Win32_Storage_FileSystem",
  "Win32_UI_WindowsAndMessaging",
] }

[profile.release]
strip = true
lto = true
codegen-units = 1
opt-level = "s"
